// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should compile with \`js\` entry point and CSS extracted: errors 1`] = `Array []`;

exports[`loader should compile with \`js\` entry point and CSS extracted: source 1`] = `
"// extracted by mini-css-extract-plugin
module.exports.b = require('b_').with('basic-css-class');"
`;

exports[`loader should compile with \`js\` entry point and CSS extracted: warnings 1`] = `Array []`;

exports[`loader should compile with \`js\` entry point with stylus and CSS extracted: errors 1`] = `Array []`;

exports[`loader should compile with \`js\` entry point with stylus and CSS extracted: source 1`] = `
"
var content = require(\\"!!../../../node_modules/css-loader/dist/cjs.js??ref--5-2!../../../node_modules/stylus-loader/index.js??ref--5-3!./stylus.styl\\");

if(typeof content === 'string') content = [[module.id, content, '']];

var transform;
var insertInto;



var options = {\\"sourceMap\\":false,\\"hmr\\":false}

options.transform = transform
options.insertInto = undefined;

var update = require(\\"!../../../node_modules/style-loader/lib/addStyles.js\\")(content, options);

if(content.locals) module.exports = content.locals;


module.exports.b = require('b_').with('FooBar');"
`;

exports[`loader should compile with \`js\` entry point with stylus and CSS extracted: warnings 1`] = `Array []`;

exports[`loader should compile with \`js\` entry point with stylus: errors 1`] = `Array []`;

exports[`loader should compile with \`js\` entry point with stylus: source 1`] = `
"
var content = require(\\"!!../../../node_modules/css-loader/dist/cjs.js??ref--5-2!../../../node_modules/stylus-loader/index.js??ref--5-3!./stylus.styl\\");

if(typeof content === 'string') content = [[module.id, content, '']];

var transform;
var insertInto;



var options = {\\"sourceMap\\":false,\\"hmr\\":false}

options.transform = transform
options.insertInto = undefined;

var update = require(\\"!../../../node_modules/style-loader/lib/addStyles.js\\")(content, options);

if(content.locals) module.exports = content.locals;


module.exports.b = require('b_').with('FooBar');"
`;

exports[`loader should compile with \`js\` entry point with stylus: warnings 1`] = `Array []`;

exports[`loader should compile with \`js\` entry point: errors 1`] = `Array []`;

exports[`loader should compile with \`js\` entry point: source 1`] = `
"
var content = require(\\"!!../../../node_modules/css-loader/dist/cjs.js??ref--4-2!./basic.css\\");

if(typeof content === 'string') content = [[module.id, content, '']];

var transform;
var insertInto;



var options = {\\"sourceMap\\":false,\\"hmr\\":false}

options.transform = transform
options.insertInto = undefined;

var update = require(\\"!../../../node_modules/style-loader/lib/addStyles.js\\")(content, options);

if(content.locals) module.exports = content.locals;


module.exports.b = require('b_').with('basic-css-class');"
`;

exports[`loader should compile with \`js\` entry point: warnings 1`] = `Array []`;
